--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -43,3 +43,7 @@ body {
     line-height: 60px; /* Vertically center the text there */
     background-color: #f5f5f5;
 }
+
+label{margin-left: 20px;}
+#datepicker{width:180px;}
+#datepicker > span:hover{cursor: pointer;}
